Fixed alignment.

--- a/app/assets/stylesheets/modules/_nav.styl
+++ b/app/assets/stylesheets/modules/_nav.styl
@@ -117,7 +117,7 @@ nav.top-nav
     width 0
     transition all 250ms ease-in-out
     opacity 0
-    vertical-align top
+    vertical-align inherit
     white-space nowrap
     text-align left
 
@@ -127,6 +127,7 @@ nav.top-nav
   li > a
     color $text
     border-bottom 0
+    vertical-align top
     +below(desktop)
       margin-left 0
 
